--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ license = "GPLv3"
 [dependencies]
 regex = "1.5"
 lazy_static = "1.4.0"
+phf = { version = "0.9", features = ["macros"] }
 clap = "3.0.0-beta.2"
