Add garish colors to the output

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,5 @@ regex = "1.5"
 lazy_static = "1.4.0"
 phf = { version = "0.10.1", features = ["macros"] }
 clap = "3.0.0"
+atty = "0.2.14"
+termcolor = "1.1.2"
