--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2018"
 name = "resynth"
-version = "0.1.2"
+version = "0.1.3"
 description = "A packet synthesis language"
 authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
 license = "GPL-3.0-only"
@@ -44,9 +44,22 @@ lto = true
 [dependencies]
 pkt = { path = "pkt", version = "0.1.1" }
 ezpkt = { path = "ezpkt", version = "0.1.1" }
+
 lazy-regex = "2.2.2"
 regex = "1.5.4"
 phf = { version = "0.10.1", features = ["macros"] }
-clap = "3.0.0"
-atty = "0.2.14"
-termcolor = "1.1.2"
+
+clap = {version = "3.0.0", optional = true}
+atty = {version = "0.2.14", optional = true}
+termcolor = {version = "1.1.2", optional = true}
+
+[[bin]]
+name = "resynth"
+path = "src/cli.rs"
+required-features = ["cli"]
+
+[features]
+default = [
+  "cli",
+]
+cli = ["clap", "atty", "termcolor"]
