--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "resynth"
 version = "0.1.11"
 description = "A packet synthesis language"
 authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
-license = "GPL-3.0-only"
+license = "MIT"
 homepage = "https://github.com/giannitedesco/resynth"
 repository = "https://github.com/giannitedesco/resynth"
 readme = "README.md"
